[package]
name = "pretty"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
ordered-float = "3.9.2"
regex = "1.10.2"
unreal_asset = { git = "https://github.com/astrotechies/unrealmodding", rev = "84e60cc" }
